# developers_salaries

./: .gitignore  README.md  languages.txt  pyproject.toml  requirements.txt
developers_salaries/: developers_salaries.py
