[tool.poetry]
name = "developers-salaries"
version = "0.1.0"
description = ""
authors = ["Alexander Mityukov <a.m.mityukov@gmail.com>"]
readme = "README.md"
packages = [{include = "developers_salaries"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
terminaltables = "^3.1.10"
environs = "^9.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
types-requests = "^2.28.11.7"
terminaltables = "^3.1.10"
requests = "^2.28.2"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ".git,.mypy_cache,__pycache__,env,venv"
max-line-length = 79
max-complexity = 6

[tool.mypy]
exclude = "env.*|venv.*"
python_version = 3.10
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
